--- a/packages/requirements.txt
+++ b/packages/requirements.txt
@@ -1,7 +1,9 @@
+absl-py==2.3.0
 annotated-types==0.6.0
 anyio==4.3.0
 appnope==0.1.4
 asttokens==2.4.1
+astunparse==1.6.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -15,8 +17,13 @@ executing==2.0.1
 fastapi==0.111.0
 fastapi-cli==0.0.3
 filelock==3.14.0
+flatbuffers==25.2.10
 fsspec==2024.5.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.73.1
 h11==0.14.0
+h5py==3.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
@@ -29,15 +36,22 @@ Jinja2==3.1.4
 joblib==1.4.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+keras==3.10.0
+libclang==18.1.1
+Markdown==3.8.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+ml-dtypes==0.3.2
 mpmath==1.3.0
+namex==0.1.0
 nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
+opt_einsum==3.4.0
+optree==0.16.0
 orjson==3.10.3
 packaging==24.0
 parso==0.8.4
@@ -45,6 +59,7 @@ pexpect==4.9.0
 pip==24.0
 platformdirs==4.2.2
 prompt-toolkit==3.0.43
+protobuf==4.25.8
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -67,6 +82,11 @@ sniffio==1.3.1
 stack-data==0.6.3
 starlette==0.37.2
 sympy==1.12
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.2
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==3.1.0
 tokenizers==0.19.1
 torch==2.2.2
 tornado==6.4
@@ -82,4 +102,6 @@ uvloop==0.19.0
 watchfiles==0.21.0
 wcwidth==0.2.13
 websockets==12.0
+Werkzeug==3.1.3
 wheel==0.43.0
+wrapt==1.17.2
